# flask-coolname

./: .gitignore  Containerfile  Makefile  README.md  gunicorn_conf.py  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: container.yml  gc.yml
flaskcoolname/: __init__.py
flaskcoolname/site/static/: about.html  index.css  index.js
flaskcoolname/site/templates/: index.html
