

[metadata]
name = flaskcoolname
version = 0.1.0
description = A simple flask app serving coolname slugs

author = Christopher O'Brien
author_email = obriencj@gmail.com

copyright_years = 2023

license = GNU Affero Public License v3 (APLv3)
license_files =
  LICENSE

long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages =
  flaskcoolname

zip_safe = False

install_requires =
  coolname
  flask

tests_require =
  requests


[options.package_data]
flaskcoolname =
  site/static/*.html
  site/static/*.css
  site/static/*.js
  site/templates/*.html


[tox:tox]
envlist = flake8,bandit,py{39,310,311}
skip_missing_interpreters = true


[testenv]

commands =
  python -B -m nose

deps =
  coverage
  nose-py3

download = true


[testenv:bandit]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg -qr flaskcoolname/

deps =
  bandit


[testenv:bandit-sarif]

basepython = python3.9

commands =
  python -B -m bandit --ini setup.cfg -qr flaskcoolname/ \
    -f sarif -o bandit.sarif \
  python -B -m sarif summary bandit.sarif

deps =
  bandit
  bandit-sarif-formatter
  sarif-tools


[testenv:flake8]

basepython = python3.9

commands =
  python -B -m flake8 flaskcoolname/

deps =
  flake8

skip_install = true


[testenv:preview]

basepython = python3.11

commands =
  python -B -m flask --app 'flaskcoolname:app' run -p 8080

deps =
  -r requirements.txt

skip_install = true


[nosetests]

all-modules = 1
no-byte-compile = 1
verbosity = 2


[bandit]

skips = B101


[flake8]
# E303 complains about more than one blank lines between methods in a class
# E731 assigning a lambda to a variable
# E741 ambiguous variable name
# F401 ambiguous variable name
# F812 list comprehension redefines variable (I reuse tmp names)
# W504 line break after binary operator

ignore = E303,E731,E741,F401,F812,W504

filename =
  *.py
  *.pyi

exclude =
  __pycache__
  .*
  build
  dist
  docs
  htmlcov
  setup.py
  tests
  todo
  tools


# The end.
